fixed connected alignment

--- a/src/Card.css
+++ b/src/Card.css
@@ -17,3 +17,7 @@
   font-size: 16px;
   padding: 20px;
 }
+
+/* img {
+  width: 150px;
+} */
